fixed input size on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -305,7 +305,7 @@ box-shadow: 0 0 0 1000px $lightColor inset !important;
     
             input{
                 width: min(80vw, 300px);
-                height: 2.8vh;
+                height: 20px;
                 background-color: $lightColor;
                 border: none;
                 font-family: 'Courier New', Courier, monospace;
